# obs-audio-monitor

./: CMakeLists.txt  README.md  audio-control.cpp  audio-control.hpp  audio-monitor-dock.cpp  audio-monitor-dock.hpp  audio-monitor-filter.c  audio-monitor-filter.h  audio-monitor-mac.c  audio-monitor-null.c  audio-monitor-pulse.c  audio-monitor-win.c  audio-monitor-win.h  audio-monitor.c  audio-output-control.cpp  audio-output-control.hpp  buildspec.json  installer.iss.in  utils.cpp  utils.hpp  volume-meter.cpp  volume-meter.hpp
.github/: FUNDING.yml
.github/actions/build-plugin/: action.yaml
.github/scripts/: .Aptfile
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build.yml
CI/macos/: audio-monitor.pkgproj
cmake/common/: bootstrap.cmake
cmake/windows/resources/: installer-Windows.iss.in
data/locale/: en-US.ini  es-ES.ini  fr-FR.ini  ja-JP.ini  pt-BR.ini
